--- a/public/html/index.html
+++ b/public/html/index.html
@@ -2,8 +2,10 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Encomenda de Produtos</title>
+    <title>Trossbe Entregas</title>
     <link rel="stylesheet" href="css/style.css">
+    <script defer src="js/order.js"></script>
+    <script defer src="js/product.js"></script>
 </head>
 <body>
 
@@ -15,27 +17,15 @@
     <main>
 
         <!-- LISTA DE PRODUTOS -->
-        <section class="produto">
+        <section id="product-list" class="produto">
             <h2>Produtos Disponíveis</h2>
-
-            <div class="card">
-                <h3>Produto A</h3>
-                <p>Descrição do produto A</p>
-                <span>R$ 50,00</span>
-            </div>
-
-            <div class="card">
-                <h3>Produto B</h3>
-                <p>Descrição do produto B</p>
-                <span>R$ 80,00</span>
-            </div>
         </section>
 
         <!-- FORMULÁRIO DE ENCOMENDA -->
         <section class="formulario">
             <h2>Nova Encomenda</h2>
 
-            <form>
+            <form id="post-order">
                 <label>Nome:</label>
                 <input name="receiver" type="text" required>
 
@@ -43,10 +33,8 @@
                 <input name="email" type="email" required>
 
                 <label>Produto:</label>
-                <select name="product" required>
-                    <option value="">Selecione</option>
-                    <option value="1">Produto A</option>
-                    <option value="2">Produto B</option>
+                <select id="product-select" name="product" required>
+                    <option>Selecione</option>
                 </select>
 
                 <label>Quantidade:</label>
@@ -70,21 +58,7 @@
                         <th>Status</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <td>João Silva</td>
-                        <td>joao@email.com</td>
-                        <td>Produto A</td>
-                        <td>2</td>
-                        <td>Em processamento</td>
-                    </tr>
-                    <tr>
-                        <td>Maria Souza</td>
-                        <td>maria@email.com</td>
-                        <td>Produto B</td>
-                        <td>1</td>
-                        <td>Finalizada</td>
-                    </tr>
+                <tbody id="order-list">
                 </tbody>
             </table>
         </section>
@@ -92,7 +66,7 @@
     </main>
 
     <footer>
-        <p>© 2025 - Loja de Encomendas</p>
+        <p>© 2025 - Trossbe Entregas</p>
     </footer>
 
 </body>
